--- a/thesis.tex
+++ b/thesis.tex
@@ -205,8 +205,8 @@
 \flushbottom
 %\include{text/introduction}
 %\include{text/theory}
-\include{text/methods}
-%\include{text/bilayers}
+%\include{text/methods}
+\include{text/bilayers}
 %\include{text/targeted_opt}
 %\include{text/general_networks}
 %\include{text/quasi2d}
@@ -219,7 +219,7 @@
 %    page that just says "Appendices" to signal the end of your main text.
 \startappendices
 % Add or remove any appendices you'd like here:
-%\include{appendices/forces}
+\include{appendices/forces}
 %\include{appendices/derivations}
 %\include{appendices/maps}
 
