Tweaks to chapter 5

--- a/text/bilayers.tex
+++ b/text/bilayers.tex
@@ -371,7 +371,7 @@ The form of the ring statistics at intermediate temperatures and for $\br{4}{10}
      \end{subfigure}
      \hfill
      
-	\vspace{0.5cm}          
+	\vspace{2mm}          
      \begin{subfigure}[b]{0.45\textwidth}
          \centering
          \includegraphics[width=\textwidth]{./figures/bilayers/triraft_410.pdf}
