--- a/text/methods.tex
+++ b/text/methods.tex
@@ -671,6 +671,7 @@ The bond lengths, $r_{ij}$, can be calculated by scanning over all nearest\--nei
 Histograms can then be constructed for each interaction type, denoted $f\left(r\right)$ and $f\left(\theta\right)$, for lengths and angles respectively.
 
 \subsection{Radial Distribution Functions}
+\label{s:rdfs}
 
 For a given point set, the radial distribution function (RDF or $g\left(r\right)$), gives the probability of finding a point at a distance $r$ from a reference point, normalised against a system of randomly distributed points at the same density.  
 The RDF in two dimensions is then given by:
